Support building a specific revision of CentOS with a specific release.
revision and release may now be defined in centos.yaml. When revision is
defined only upstream builds with a matching revision will be built. A
release may also be specified to allow revisions to be rebuilt.

bzr-revno: 399.4.1

--- a/conf/centos.yaml
+++ b/conf/centos.yaml
@@ -14,6 +14,12 @@ versions:
         path_version: 7
         release_title: "CentOS 7.0"
         curtin_files: "{curtin_path}/centos7"
+        # The upstream revision to create MAAS images for. All other versions
+        # are ignored if this is defined.
+        revision: 1808
+        # The lp:maas-images release. This defaults to 01. Changing this will
+        # cause a new build of the revision to be imported.
+        release: 02
         packages:
          # cloud-init depends on packages from EPEL
          - epel-release
@@ -49,6 +55,12 @@ versions:
         version: 6.6
         release_title: "CentOS 6.6"
         curtin_files: "{curtin_path}/centos6"
+        # The upstream revision to create MAAS images for. All other versions
+        # are ignored if this is defined.
+        revision: 1808
+        # The lp:maas-images release. This defaults to 01. Changing this will
+        # cause a new build of the revision to be imported.
+        release: 02
         packages:
          # cloud-init depends on packages from EPEL
          - epel-release
