Specify the CentOS base and EPEL mirror to use.
0adc898 modified lp:maas-images to use a consistent mirror as defined by the
default repo configuration files. While the mirror is consistent upstream uses
redirects to balance the load. This breaks in locked down environments.
Specific mirrors may now be specified in centos.yaml to ensure the mirror
really is consistent.

--- a/conf/centos.yaml
+++ b/conf/centos.yaml
@@ -4,6 +4,8 @@ product_id: "com.ubuntu.maas.daily:centos-bases:{version}:{arch}"
 content_id: "com.ubuntu.maas:daily:centos-bases-download"
 os: centos
 arch: amd64
+base_mirror: http://mirrors.edge.kernel.org
+epel_mirror: http://mirrors.kernel.org/fedora-epel
 
 versions:
     centos70:
