LP: 1811461 - Add 18.04 HWE and edge kernels.

--- a/conf/meph-v3.yaml
+++ b/conf/meph-v3.yaml
@@ -25,12 +25,13 @@ subarches:
  - &sa_hwe_v        [generic,           hwe-p, hwe-q, hwe-r, hwe-s, hwe-t, hwe-u, hwe-v]
  - &sa_hwe_w        [generic,           hwe-p, hwe-q, hwe-r, hwe-s, hwe-t, hwe-u, hwe-v, hwe-w]
  - &sa_hwe_x        [generic,           hwe-p, hwe-q, hwe-r, hwe-s, hwe-t, hwe-u, hwe-v, hwe-w, ga-16.04]
- - &sa_hwe_x_edge   [generic,           hwe-p, hwe-q, hwe-r, hwe-s, hwe-t, hwe-u, hwe-v, hwe-w, ga-16.04, hwe-16.04, hwe-16.10]
+ - &sa_hwe_x_edge   [generic,           hwe-p, hwe-q, hwe-r, hwe-s, hwe-t, hwe-u, hwe-v, hwe-w, ga-16.04, hwe-16.04, hwe-16.10, hwe-17.04, hwe-17.10, hwe-18.04]
  - &sa_hwe_x_legacy [generic,           hwe-p, hwe-q, hwe-r, hwe-s, hwe-t, hwe-u, hwe-v, hwe-w, hwe-x]
  - &sa_hwe_y        [generic,           hwe-p, hwe-q, hwe-r, hwe-s, hwe-t, hwe-u, hwe-v, hwe-w, ga-16.04, ga-16.10]
  - &sa_hwe_z        [generic,           hwe-p, hwe-q, hwe-r, hwe-s, hwe-t, hwe-u, hwe-v, hwe-w, ga-16.04, ga-16.10, ga-17.04]
  - &sa_hwe_a        [generic,           hwe-p, hwe-q, hwe-r, hwe-s, hwe-t, hwe-u, hwe-v, hwe-w, ga-16.04, ga-16.10, ga-17.04, ga-17.10]
  - &sa_hwe_b        [generic,           hwe-p, hwe-q, hwe-r, hwe-s, hwe-t, hwe-u, hwe-v, hwe-w, ga-16.04, ga-16.10, ga-17.04, ga-17.10, ga-18.04]
+ - &sa_hwe_b_edge   [generic,           hwe-p, hwe-q, hwe-r, hwe-s, hwe-t, hwe-u, hwe-v, hwe-w, ga-16.04, ga-16.10, ga-17.04, ga-17.10, ga-18.04, hwe-18.10, hwe-19.04]
  - &sa_hwe_cc       [generic,           hwe-p, hwe-q, hwe-r, hwe-s, hwe-t, hwe-u, hwe-v, hwe-w, ga-16.04, ga-16.10, ga-17.04, ga-17.10, ga-18.04, ga-18.10]
  - &sa_hwe_dd       [generic,           hwe-p, hwe-q, hwe-r, hwe-s, hwe-t, hwe-u, hwe-v, hwe-w, ga-16.04, ga-16.10, ga-17.04, ga-17.10, ga-18.04, ga-18.10, ga-19.04]
  - &arm_hwe_t       [generic, highbank, hwe-p, hwe-q, hwe-r, hwe-s, hwe-t]
@@ -38,11 +39,12 @@ subarches:
  - &arm_hwe_v       [generic, highbank, hwe-p, hwe-q, hwe-r, hwe-s, hwe-t, hwe-u, hwe-v]
  - &arm_hwe_w       [generic, highbank, hwe-p, hwe-q, hwe-r, hwe-s, hwe-t, hwe-u, hwe-v, hwe-w]
  - &arm_hwe_x       [generic, highbank, hwe-p, hwe-q, hwe-r, hwe-s, hwe-t, hwe-u, hwe-v, hwe-w, ga-16.04]
- - &arm_hwe_x_edge  [generic, highbank, hwe-p, hwe-q, hwe-r, hwe-s, hwe-t, hwe-u, hwe-v, hwe-w, ga-16.04, hwe-16.04, hwe-16.10]
+ - &arm_hwe_x_edge  [generic, highbank, hwe-p, hwe-q, hwe-r, hwe-s, hwe-t, hwe-u, hwe-v, hwe-w, ga-16.04, hwe-16.04, hwe-16.10, hwe-17.04, hwe-17.10, hwe-18.04]
  - &arm_hwe_y       [generic, highbank, hwe-p, hwe-q, hwe-r, hwe-s, hwe-t, hwe-u, hwe-v, hwe-w, ga-16.04, ga-16.10]
  - &arm_hwe_z       [generic, highbank, hwe-p, hwe-q, hwe-r, hwe-s, hwe-t, hwe-u, hwe-v, hwe-w, ga-16.04, ga-16.10, ga-17.04]
  - &arm_hwe_a       [generic, highbank, hwe-p, hwe-q, hwe-r, hwe-s, hwe-t, hwe-u, hwe-v, hwe-w, ga-16.04, ga-16.10, ga-17.04, ga-17.10]
  - &arm_hwe_b       [generic, highbank, hwe-p, hwe-q, hwe-r, hwe-s, hwe-t, hwe-u, hwe-v, hwe-w, ga-16.04, ga-16.10, ga-17.04, ga-17.10, ga-18.04]
+ - &arm_hwe_b_edge  [generic, highbank, hwe-p, hwe-q, hwe-r, hwe-s, hwe-t, hwe-u, hwe-v, hwe-w, ga-16.04, ga-16.10, ga-17.04, ga-17.10, ga-18.04, hwe-18.10, hwe-19.04]
  - &arm_hwe_cc      [generic, highbank, hwe-p, hwe-q, hwe-r, hwe-s, hwe-t, hwe-u, hwe-v, hwe-w, ga-16.04, ga-16.10, ga-17.04, ga-17.10, ga-18.04, ga-18.10]
  - &arm_hwe_dd      [generic, highbank, hwe-p, hwe-q, hwe-r, hwe-s, hwe-t, hwe-u, hwe-v, hwe-w, ga-16.04, ga-16.10, ga-17.04, ga-17.10, ga-18.04, ga-18.10, ga-19.04]
 
@@ -86,17 +88,33 @@ releases:
  - version: "18.04"
    release: bionic
    kernels:
-    - [bionic,     amd64,    ga-18.04,        generic,     linux-signed-generic,                 *sa_hwe_b]
-    - [bionic,     amd64,    ga-18.04,        lowlatency,  linux-signed-image-lowlatency,        *sa_hwe_b]
-    - [bionic,     arm64,    ga-18.04,        generic,     linux-generic,                        *sa_hwe_b]
-    - [bionic,     arm64,    *mustang,        generic,     linux-generic,                        [*mustang], *kh-mustang]
-    - [bionic,     arm64,    *xguboot,        generic,     linux-generic,                        [*xguboot], *kh-xgene]
-    - [bionic,     armhf,    *glpae,          *glpae,      linux-generic-lpae,                   [*glpae]]
-    - [bionic,     armhf,    ga-18.04,        generic,     linux-generic,                        *arm_hwe_b]
-    - [bionic,     i386,     ga-18.04,        generic,     linux-generic,                        *sa_hwe_b]
-    - [bionic,     i386,     ga-18.04,        lowlatency,  linux-image-lowlatency,               *sa_hwe_b]
-    - [bionic,     ppc64el,  ga-18.04,        generic,     linux-generic,                        *sa_hwe_b]
-    - [bionic,     s390x,    ga-18.04,        generic,     linux-generic,                        *sa_hwe_b]
+    - [bionic,     amd64,    ga-18.04,        generic,     linux-signed-generic,                        *sa_hwe_b]
+    - [bionic,     amd64,    ga-18.04,        lowlatency,  linux-signed-lowlatency,                     *sa_hwe_b]
+    - [bionic,     amd64,    hwe-18.04,       generic,     linux-signed-generic-hwe-18.04,              *sa_hwe_b]
+    - [bionic,     amd64,    hwe-18.04,       lowlatency,  linux-signed-lowlatency-hwe-18.04,           *sa_hwe_b]
+    - [bionic,     amd64,    hwe-18.04-edge,  generic,     linux-signed-generic-hwe-18.04-edge,         *sa_hwe_b_edge]
+    - [bionic,     amd64,    hwe-18.04-edge,  lowlatency,  linux-signed-lowlatency-hwe-18.04-edge,      *sa_hwe_b_edge]
+    - [bionic,     arm64,    ga-18.04,        generic,     linux-generic,                               *sa_hwe_b]
+    - [bionic,     arm64,    hwe-18.04,       generic,     linux-generic-hwe-18.04,                     *sa_hwe_b]
+    - [bionic,     arm64,    hwe-18.04-edge,  generic,     linux-generic-hwe-18.04-edge,                *sa_hwe_b_edge]
+    - [bionic,     arm64,    *mustang,        generic,     linux-generic,                               [*mustang], *kh-mustang]
+    - [bionic,     arm64,    *xguboot,        generic,     linux-generic,                               [*xguboot], *kh-xgene]
+    - [bionic,     armhf,    *glpae,          *glpae,      linux-generic-lpae,                          [*glpae]]
+    - [bionic,     armhf,    ga-18.04,        generic,     linux-generic,                               *arm_hwe_b]
+    - [bionic,     armhf,    hwe-18.04,       generic,     linux-generic-hwe-18.04,                     *arm_hwe_b]
+    - [bionic,     armhf,    hwe-18.04-edge,  generic,     linux-generic-hwe-18.04-edge,                *arm_hwe_b_edge]
+    - [bionic,     i386,     ga-18.04,        generic,     linux-generic,                               *sa_hwe_b]
+    - [bionic,     i386,     ga-18.04,        lowlatency,  linux-lowlatency,                            *sa_hwe_b]
+    - [bionic,     i386,     hwe-18.04,       generic,     linux-generic-hwe-18.04,                     *sa_hwe_b]
+    - [bionic,     i386,     hwe-18.04,       lowlatency,  linux-lowlatency-hwe-18.04,                  *sa_hwe_b]
+    - [bionic,     i386,     hwe-18.04-edge,  generic,     linux-generic-hwe-18.04-edge,                *sa_hwe_b_edge]
+    - [bionic,     i386,     hwe-18.04-edge,  lowlatency,  linux-lowlatency-hwe-18.04-edge,             *sa_hwe_b_edge]
+    - [bionic,     ppc64el,  ga-18.04,        generic,     linux-generic,                               *sa_hwe_b]
+    - [bionic,     ppc64el,  hwe-18.04,       generic,     linux-generic-hwe-18.04,                     *sa_hwe_b]
+    - [bionic,     ppc64el,  hwe-18.04-edge,  generic,     linux-generic-hwe-18.04-edge,                *sa_hwe_b_edge]
+    - [bionic,     s390x,    ga-18.04,        generic,     linux-generic,                               *sa_hwe_b]
+    - [bionic,     s390x,    hwe-18.04,       generic,     linux-generic-hwe-18.04,                     *sa_hwe_b]
+    - [bionic,     s390x,    hwe-18.04-edge,  generic,     linux-generic-hwe-18.04-edge,                *sa_hwe_b_edge]
  - version: "16.04"
    release: xenial
    kernels:
