Add support for Focal Fossa

--- a/conf/meph-v2.yaml
+++ b/conf/meph-v2.yaml
@@ -28,6 +28,7 @@ subarches:
  - &sa_hwe_c  [generic, hwe-p, hwe-q, hwe-r, hwe-s, hwe-t, hwe-u, hwe-v, hwe-w, hwe-x, hwe-y, hwe-z, hwe-a, hwe-b, hwe-c]
  - &sa_hwe_d  [generic, hwe-p, hwe-q, hwe-r, hwe-s, hwe-t, hwe-u, hwe-v, hwe-w, hwe-x, hwe-y, hwe-z, hwe-a, hwe-b, hwe-c, hwe-d]
  - &sa_hwe_e  [generic, hwe-p, hwe-q, hwe-r, hwe-s, hwe-t, hwe-u, hwe-v, hwe-w, hwe-x, hwe-y, hwe-z, hwe-a, hwe-b, hwe-c, hwe-d, hwe-e]
+ - &sa_hwe_f  [generic, hwe-p, hwe-q, hwe-r, hwe-s, hwe-t, hwe-u, hwe-v, hwe-w, hwe-x, hwe-y, hwe-z, hwe-a, hwe-b, hwe-c, hwe-d, hwe-e, hwe-f]
  - &arm_hwe_t [generic, highbank, hwe-p, hwe-q, hwe-r, hwe-s, hwe-t]
  - &arm_hwe_u [generic, highbank, hwe-p, hwe-q, hwe-r, hwe-s, hwe-t, hwe-u]
  - &arm_hwe_v [generic, highbank, hwe-p, hwe-q, hwe-r, hwe-s, hwe-t, hwe-u, hwe-v]
@@ -40,6 +41,7 @@ subarches:
  - &arm_hwe_c [generic, highbank, hwe-p, hwe-q, hwe-r, hwe-s, hwe-t, hwe-u, hwe-v, hwe-w, hwe-x, hwe-y, hwe-z, hwe-a, hwe-b, hwe-c]
  - &arm_hwe_d [generic, highbank, hwe-p, hwe-q, hwe-r, hwe-s, hwe-t, hwe-u, hwe-v, hwe-w, hwe-x, hwe-y, hwe-z, hwe-a, hwe-b, hwe-c, hwe-d]
  - &arm_hwe_e [generic, highbank, hwe-p, hwe-q, hwe-r, hwe-s, hwe-t, hwe-u, hwe-v, hwe-w, hwe-x, hwe-y, hwe-z, hwe-a, hwe-b, hwe-c, hwe-d, hwe-e]
+ - &arm_hwe_f [generic, highbank, hwe-p, hwe-q, hwe-r, hwe-s, hwe-t, hwe-u, hwe-v, hwe-w, hwe-x, hwe-y, hwe-z, hwe-a, hwe-b, hwe-c, hwe-d, hwe-e, hwe-f]
 
 misc:
  - &glpae generic-lpae
@@ -50,18 +52,30 @@ misc:
  - &kh-xgene   {suffix: .xgene, kihelper: "kh-xgene", di-format: 'xgene'}
 
 releases:
+ - version: "20.04"
+   release: focal
+   kernels:
+    - [focal,    amd64,   hwe-f,    generic,   linux-signed-generic,     *sa_hwe_f]
+    - [focal,    arm64,   hwe-f,    generic,   linux-generic,            *sa_hwe_f]
+    - [focal,    arm64,   *mustang, generic,   linux-generic,            [*mustang], *kh-mustang]
+    - [focal,    arm64,   *xguboot, generic,   linux-generic,            [*xguboot], *kh-xgene]
+    - [focal,    armhf,   *glpae,   *glpae,    linux-generic-lpae,       [*glpae]]
+    - [focal,    armhf,   hwe-f,    generic,   linux-generic,            *arm_hwe_f]
+    - [focal,    i386,    hwe-f,    generic,   linux-generic,            *sa_hwe_f]
+    - [focal,    ppc64el, hwe-f,    generic,   linux-generic,            *sa_hwe_f]
+    - [focal,    s390x,   hwe-f,    generic,   linux-generic,            *sa_hwe_f]
  - version: "19.10"
    release: eoan
    kernels:
-    - [eoan,    amd64,   hwe-d,    generic,   linux-signed-generic,     *sa_hwe_e]
-    - [eoan,    arm64,   hwe-d,    generic,   linux-generic,            *sa_hwe_e]
+    - [eoan,    amd64,   hwe-e,    generic,   linux-signed-generic,     *sa_hwe_e]
+    - [eoan,    arm64,   hwe-e,    generic,   linux-generic,            *sa_hwe_e]
     - [eoan,    arm64,   *mustang, generic,   linux-generic,            [*mustang], *kh-mustang]
     - [eoan,    arm64,   *xguboot, generic,   linux-generic,            [*xguboot], *kh-xgene]
     - [eoan,    armhf,   *glpae,   *glpae,    linux-generic-lpae,       [*glpae]]
-    - [eoan,    armhf,   hwe-d,    generic,   linux-generic,            *arm_hwe_e]
-    - [eoan,    i386,    hwe-d,    generic,   linux-generic,            *sa_hwe_e]
-    - [eoan,    ppc64el, hwe-d,    generic,   linux-generic,            *sa_hwe_e]
-    - [eoan,    s390x,   hwe-d,    generic,   linux-generic,            *sa_hwe_e]
+    - [eoan,    armhf,   hwe-e,    generic,   linux-generic,            *arm_hwe_e]
+    - [eoan,    i386,    hwe-e,    generic,   linux-generic,            *sa_hwe_e]
+    - [eoan,    ppc64el, hwe-e,    generic,   linux-generic,            *sa_hwe_e]
+    - [eoan,    s390x,   hwe-e,    generic,   linux-generic,            *sa_hwe_e]
  - version: "19.04"
    release: disco
    kernels:
